preliminary fix for the presentation of the container on mobile devices

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -272,6 +272,7 @@ body {
       left: 50%;
       transform: translate(-50%, -40%);
       padding: 10px;
+      margin-top: 275px!important
   }
 
   .profile {
